--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,11 @@
   },
   "dependencies": {
     "@tanstack/react-query": "^4.19.1",
-    "@trpc/client": "^10.4.3",
-    "@trpc/react": "^9.27.4",
-    "@trpc/react-query": "^10.4.3",
-    "@trpc/server": "^10.4.3",
+    "@trpc/client": "^10.7.0",
+    "@trpc/react-query": "^10.7.0",
+    "@trpc/server": "^10.7.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-query": "^3.39.2"
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.24",
