--- a/package.json
+++ b/package.json
@@ -7,11 +7,12 @@
     "dev": "ts-node-dev src/index.ts"
   },
   "dependencies": {
-    "@trpc/react-query": "^10.4.3",
-    "@trpc/server": "^10.4.2",
+    "@trpc/react-query": "^10.7.0",
+    "@trpc/server": "^10.7.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
-    "typescript": "^4.9.3"
+    "typescript": "^4.9.3",
+    "zod": "^3.20.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.12",
